<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="334dp"
        android:layout_height="434dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/titulo"
            android:textAlignment="center"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/valor" />

        <EditText
            android:id="@+id/number1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="0"
            android:inputType="number" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/valor" />

        <EditText
            android:id="@+id/number2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="0"
            android:inputType="number" />

        <TextView
            android:id="@+id/resultado"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/resultado"
            android:textAlignment="center"
            android:textSize="24sp" />

        <Button
            android:id="@+id/sumar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/boton_sumar" />

        <Button
            android:id="@+id/restar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/boton_restar" />

        <Button
            android:id="@+id/multiplicar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/boton_multiplicar" />

        <Button
            android:id="@+id/dividir"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/boton_dividir" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>


